# My_Project

./: README.md
Gobang_Online/: README.md
Gobang_Online/GobangServer/src/: api.cpp  base.h  gobangserver.cpp  main.cpp  player.h  room.cpp  socket_func.cpp  thread_pool.h
Qt_MusicPlayer/: Qt_MusicPlayer.pro  assets.qrc  main.cpp  widget.cpp  widget.h  widget.ui
build-Qt_MusicPlayer-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-Qt_MusicPlayer-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/debug/: moc_widget.cpp  qrc_assets.cpp
人机对战五子棋/: 人机对战五子棋.sln
人机对战五子棋/Debug/: 人机对战五子棋.ilk
人机对战五子棋/x64/Debug/: 人机对战五子棋.ilk
人机对战五子棋/人机对战五子棋/: AI.cpp  AI.h  Chess.cpp  Chess.h  ChessGame.cpp  ChessGame.h  Main.cpp  Man.cpp  Man.h  Man2.cpp  Man2.h  人机对战五子棋.vcxproj  人机对战五子棋.vcxproj.filters
人机对战五子棋/人机对战五子棋/Debug/: vc141.idb
安全通信系统代码/CSI/: Get_symbols.cpp  Initialization.cpp  RX_OUT.cpp  RX_OUT_V2X.cpp  Rx_Demodulation.cpp  Rx_ReadData.cpp  Rx_channel_estimation.cpp  Rx_channel_estimation_V2X.cpp  Synchronization.cpp  Winner_Filter.cpp  function.cpp  header.h  rx_data3
安全通信系统代码/Config/: Config.cpp  Config.h  global.conf  master.conf  slave.conf
安全通信系统代码/Key/: Key.cpp  Key.h
安全通信系统代码/MQTT/: MQTTSubThread.cpp  MQTTSubThread.h  MQTTThread.cpp  MQTTThread.h  SendEncryptedImageMsg.cpp  SendEncryptedImageMsg.h  SendLdpcEncodedMsgCmd.cpp  SendLdpcEncodedMsgCmd.h  SendOriginMsg.cpp  SendOriginMsg.h  SendPolarEncodedMsgCmd.cpp  SendPolarEncodedMsgCmd.h
安全通信系统代码/Thread/: WorkThread.cpp  WorkThread.h
安全通信系统代码/UI/: UI.pro  UI.pro.user.7dc9075  UI.pro.user.9e347d7  filter.qrc  image.qrc  images.qrc  main.cpp  tx_datas.qrc  widget.cpp  widget.h  widget.ui
安全通信系统代码/Util/File/: file.cpp  file.h
安全通信系统代码/Util/Image/: toolLet.cpp  toolLet.h
安全通信系统代码/Util/mqtt/: CMakeLists.txt  MQTTClient.c  MQTTClient.h
(+231 files in other folders)
